--- a/apps/www/content/docs/components/combobox.mdx
+++ b/apps/www/content/docs/components/combobox.mdx
@@ -73,7 +73,7 @@ export function ComboboxDemo() {
           variant="outline"
           role="combobox"
           aria-expanded={open}
-          className="w-[200px] justify-between"
+          className="w-[200px] justify-between focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2"
         >
           {value
             ? frameworks.find((framework) => framework.value === value)?.label
