feat: update copy

--- a/apps/www/content/docs/v0.mdx
+++ b/apps/www/content/docs/v0.mdx
@@ -3,7 +3,7 @@ title: Open in v0
 description: Open components in v0 for customization.
 ---
 
-Every component on ui.shadcn.com is editable in [v0 by Vercel](https://v0.dev). This allows you to easily customize in natural language and paste into your app.
+Every component on ui.shadcn.com is editable on [v0 by Vercel](https://v0.dev). This allows you to easily customize the components in natural language and paste into your app.
 
 <a href="https://vercel.com/signup?utm_source=shad&utm_medium=web&utm_campaign=docs_cta_signup">
   <Image
