--- a/apps/www/content/docs/components/toast.mdx
+++ b/apps/www/content/docs/components/toast.mdx
@@ -151,3 +151,10 @@ To display multiple toasts at the same time, you can update the `TOAST_LIMIT` in
 Use `toast({ variant: "destructive" })` to display a destructive toast.
 
 <ComponentPreview name="toast-destructive" />
+
+
+### Success
+
+Use `toast({ variant: "success" })` to display a success toast.
+
+<ComponentPreview name="toast-success" />
