Update content config

--- a/apps/www/content/docs/installation/vite.mdx
+++ b/apps/www/content/docs/installation/vite.mdx
@@ -38,7 +38,10 @@ Configure the tailwind template paths in `tailwind.config.js`:
 ```js {3}
 /** @type {import('tailwindcss').Config} */
 module.exports = {
-  content: ["./src/**/*.{html,js}"],
+  content: [
+    "./src/**/*.{ts,tsx,js,jsx}",
+    "./index.html"
+  ],
   theme: {
     extend: {},
   },
