docs: Update Tailwind Vite installation guide link

--- a/apps/www/content/docs/installation/vite.mdx
+++ b/apps/www/content/docs/installation/vite.mdx
@@ -23,7 +23,7 @@ npm install -D tailwindcss postcss autoprefixer
 npx tailwindcss init -p
 ```
 
-Follow the remaining instructions in the Tailwind documentation to add Tailwind to your project:
+Follow the remaining instructions in the Tailwind documentation:
 
 [Official Tailwind Vite installation guide](https://tailwindcss.com/docs/guides/vite)
 
