--- a/apps/www/content/docs/installation/vite.mdx
+++ b/apps/www/content/docs/installation/vite.mdx
@@ -23,7 +23,7 @@ npm install -D tailwindcss postcss autoprefixer
 npx tailwindcss init -p
 ```
 
-### Edit tsconfig.json file
+### Edit tsconfig.json and tsconfig.app.json file
 
 The current version of Vite splits TypeScript configuration into three files, two of which need to be edited.
 Add the `baseUrl` and `paths` properties to the `compilerOptions` section of the `tsconfig.json` and
@@ -45,25 +45,6 @@ Add the `baseUrl` and `paths` properties to the `compilerOptions` section of the
     "paths": {
       "@/*": ["./src/*"]
     }
-  }
-}
-```
-
-### Edit tsconfig.app.json file
-
-Add the following code to the `tsconfig.app.json` file to resolve paths, for your IDE:
-
-```ts {4-9} showLineNumbers
-{
-  "compilerOptions": {
-    // ...
-    "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ]
-    }
-    // ...
   }
 }
 ```
