feat(input-component): support icons left/right

--- a/apps/www/content/docs/components/input.mdx
+++ b/apps/www/content/docs/components/input.mdx
@@ -97,3 +97,10 @@ import { Input } from "@/components/ui/input"
 ### Form
 
 <ComponentPreview name="input-form" />
+
+### With Icons
+
+<ComponentPreview
+  name="input-with-icons"
+  description="An input with icons on both sides"
+/>
