Configure Tailwind CSS content paths for vite
- Add paths to template files in tailwind.config.js
- Include index.html and all JS/TS files in src directory

--- a/apps/www/content/docs/installation/vite.mdx
+++ b/apps/www/content/docs/installation/vite.mdx
@@ -22,6 +22,21 @@ npm install -D tailwindcss postcss autoprefixer
 
 npx tailwindcss init -p
 ```
+Add the paths to all of your template files in your `tailwind.config.js` file.
+
+```ts {3-4} showLineNumbers
+/** @type {import('tailwindcss').Config} */
+export default {
+  content: [
+    "./index.html",
+    "./src/**/*.{js,ts,jsx,tsx}",
+  ],
+  theme: {
+    extend: {},
+  },
+  plugins: [],
+}
+```
 
 ### Edit tsconfig.json file
 
