added a callback props in SidebarProvider component

--- a/apps/www/content/docs/components/sidebar.mdx
+++ b/apps/www/content/docs/components/sidebar.mdx
@@ -342,11 +342,12 @@ The `SidebarProvider` component is used to provide the sidebar context to the `S
 
 ### Props
 
-| Name          | Type                      | Description                                  |
-| ------------- | ------------------------- | -------------------------------------------- |
-| `defaultOpen` | `boolean`                 | Default open state of the sidebar.           |
-| `open`        | `boolean`                 | Open state of the sidebar (controlled).      |
-| `onOpenChange`| `(open: boolean) => void` | Sets open state of the sidebar (controlled). |
+| Name          | Type                                           | Description                                                  |
+| ------------- | -------------------------                      | --------------------------------------------                 |
+| `defaultOpen` | `boolean`                                      | Default open state of the sidebar.                           |
+| `open`        | `boolean`                                      | Open state of the sidebar (controlled).                      |
+| `onOpenChange`| `(open: boolean) => void`                      | Sets open state of the sidebar (controlled).                 |
+| `callback`    | `(open: boolean, openMobile: boolean) => void` | Get the state updates of the sidebar such as open and openMobile|
 
 ### Width
 
