--- a/apps/www/content/docs/components/sidebar.mdx
+++ b/apps/www/content/docs/components/sidebar.mdx
@@ -1301,7 +1301,7 @@ Here are some tips for styling the sidebar based on different states.
 
 You can find more tips on using states for styling in this [Twitter thread](https://x.com/shadcn/status/1842329158879420864).
 
-## Chanelog
+## Changelog
 
 ### 2024-10-20 Typo in `useSidebar` hook.
 
