UPDATE next-theme doc to remove suppressHydrationWarning from <html>

--- a/apps/www/content/docs/dark-mode/next.mdx
+++ b/apps/www/content/docs/dark-mode/next.mdx
@@ -39,7 +39,7 @@ import { ThemeProvider } from "@/components/theme-provider"
 export default function RootLayout({ children }: RootLayoutProps) {
   return (
     <>
-      <html lang="en" suppressHydrationWarning>
+      <html lang="en">
         <head />
         <body>
           <ThemeProvider
