fix: :label: typescript errors

--- a/apps/www/content/docs/components/spinner.mdx
+++ b/apps/www/content/docs/components/spinner.mdx
@@ -39,8 +39,8 @@ module.exports = {
       keyframes: {
         ...
         "spinner": {
-          "0%": { opacity: 1 },
-          "to": { opacity: .15 }
+          from: { opacity: "1" },
+          to: { opacity: "0.15" }
         }
       },
       animation: {
