--- a/apps/www/content/docs/components/drawer.mdx
+++ b/apps/www/content/docs/components/drawer.mdx
@@ -90,3 +90,15 @@ import {
 You can combine the `Dialog` and `Drawer` components to create a responsive dialog. This renders a `Dialog` component on desktop and a `Drawer` on mobile.
 
 <ComponentPreview name="drawer-dialog" />
+
+### Side drawer
+
+You can adjust the position of the drawer with the `direction` prop.
+
+<ComponentPreview name="drawer-side" />
+
+### Nested drawer
+
+You can nest drawers by using the `<NestedDrawer />` component.
+
+<ComponentPreview name="drawer-nested" />
