--- a/apps/www/content/docs/react-19.mdx
+++ b/apps/www/content/docs/react-19.mdx
@@ -155,9 +155,11 @@ To use recharts with React 19, you will need to override the `react-is` dependen
 
 ```json title="package.json"
 "overrides": {
-  "react-is": "^19.0.0-beta-26f2496093-20240514"
+  "react-is": "^19.0.0-rc-69d4b800-20241021"
 }
 ```
+
+Note: the `react-is` version needs to match the version of React 19 you are using. The above is an example.
 
 <Step>Run `npm install --legacy-peer-deps`</Step>
 
