--- a/apps/www/content/docs/components/sidebar.mdx
+++ b/apps/www/content/docs/components/sidebar.mdx
@@ -406,11 +406,11 @@ You can change the keyboard shortcut by updating the `SIDEBAR_KEYBOARD_SHORTCUT`
 const SIDEBAR_KEYBOARD_SHORTCUT = "b"
 ```
 
-### Persisting State with SSR
+### Persisted State
 
 The `SidebarProvider` supports persisting the sidebar state across page reloads and server-side rendering. It uses cookies to store the current state of the sidebar. When the sidebar state changes, a default cookie named `sidebar:state` is set with the current open/closed state. This cookie is then read on subsequent page loads to restore the sidebar state.
 
-To persist sidebar state with SSR, set up your `SidebarProvider` in `app/layout.tsx` like this:
+To persist sidebar state in Next.js, set up your `SidebarProvider` in `app/layout.tsx` like this:
 
 ```tsx showLineNumbers title="app/layout.tsx"
 import { cookies } from "next/headers"
@@ -419,12 +419,8 @@ import { SidebarProvider, SidebarTrigger } from "@/components/ui/sidebar"
 import { AppSidebar } from "@/components/app-sidebar"
 
 export async function Layout({ children }: { children: React.ReactNode }) {
-  const sidebarState = cookies().get("sidebar:state")
-
-  let defaultOpen = true
-  if (sidebarState) {
-    defaultOpen = sidebarState.value === "true"
-  }
+  const cookieStore = await cookies()
+  const defaultOpen = cookieStore.get("sidebar:state")?.value === "true"
 
   return (
     <SidebarProvider defaultOpen={defaultOpen}>
@@ -436,6 +432,12 @@ export async function Layout({ children }: { children: React.ReactNode }) {
     </SidebarProvider>
   )
 }
+```
+
+You can change the name of the cookie by updating the `SIDEBAR_COOKIE_NAME` variable in `sidebar.tsx`.
+
+```tsx showLineNumbers title="components/ui/sidebar.tsx"
+const SIDEBAR_COOKIE_NAME = "sidebar:state"
 ```
 
 ## Sidebar
@@ -1355,14 +1357,30 @@ You can find more tips on using states for styling in this [Twitter thread](http
 
 ## Changelog
 
-### 2024-10-27 Refactor `<SidebarProvider>`
+### 2024-10-30 Cookie handling in setOpen
 
-- Improved setOpen callback logic in `<SidebarProvider>`
-  - Simplify state handling.
-  - Ensure consistent cookie setting.
-  - Added ability for users to persist sidebar state via cookies.
+- [#5593](https://github.com/shadcn-ui/ui/pull/5593) - Improved setOpen callback logic in `<SidebarProvider>`.
 
-### 2024-10-21
+Update the `setOpen` callback in `<SidebarProvider>` as follows:
+
+```tsx showLineNumbers
+const setOpen = React.useCallback(
+  (value: boolean | ((value: boolean) => boolean)) => {
+    const openState = typeof value === "function" ? value(open) : value
+    if (setOpenProp) {
+      setOpenProp(openState)
+    } else {
+      _setOpen(openState)
+    }
+
+    // This sets the cookie to keep the sidebar state.
+    document.cookie = `${SIDEBAR_COOKIE_NAME}=${openState}; path=/; max-age=${SIDEBAR_COOKIE_MAX_AGE}`
+  },
+  [setOpenProp, open]
+)
+```
+
+### 2024-10-21 Fixed `text-sidebar-foreground`
 
 - [#5491](https://github.com/shadcn-ui/ui/pull/5491) - Moved `text-sidebar-foreground` from `<SidebarProvider>` to `<Sidebar>` component.
 
