New figma open source free ui kit

--- a/apps/www/content/docs/figma.mdx
+++ b/apps/www/content/docs/figma.mdx
@@ -10,3 +10,5 @@ description: Every component recreated in Figma. With customizable props, typogr
 ## Free
 
 - [shadcn/ui design system](https://www.figma.com/community/file/1203061493325953101) by [Pietro Schirano](https://twitter.com/skirano) - A design companion for shadcn/ui. Each component was painstakingly crafted to perfectly match the code implementation.
+
+-[shadcn/ui kit](https://www.figma.com/community/file/1426161867268046394) by [Yauheni](https://www.loom.com/share/80fcdc851f044229bb23d87b7812cee8) - A complete UI Kit including "complex" components such as Sidebar
