--- a/apps/www/content/docs/dark-mode/vite.mdx
+++ b/apps/www/content/docs/dark-mode/vite.mdx
@@ -10,7 +10,13 @@ description: Adding dark mode to your vite app.
 ### Create a theme provider
 
 ```tsx title="components/theme-provider.tsx"
-import { createContext, useContext, useEffect, useState } from "react"
+import {
+  createContext,
+  useCallback,
+  useContext,
+  useEffect,
+  useState,
+} from "react"
 
 type Theme = "dark" | "light" | "system"
 
@@ -42,16 +48,15 @@ export function ThemeProvider({
     () => (localStorage.getItem(storageKey) as Theme) || defaultTheme
   )
 
-  useEffect(() => {
+  const handleThemeChange = useCallback(() => {
     const root = window.document.documentElement
 
     root.classList.remove("light", "dark")
 
+    const mediaQueryList = window.matchMedia("(prefers-color-scheme: dark)")
+
     if (theme === "system") {
-      const systemTheme = window.matchMedia("(prefers-color-scheme: dark)")
-        .matches
-        ? "dark"
-        : "light"
+      const systemTheme = mediaQueryList.matches ? "dark" : "light"
 
       root.classList.add(systemTheme)
       return
@@ -59,6 +64,18 @@ export function ThemeProvider({
 
     root.classList.add(theme)
   }, [theme])
+
+  useEffect(() => {
+    handleThemeChange()
+  }, [theme, handleThemeChange])
+
+  useEffect(() => {
+    const mediaQueryList = window.matchMedia("(prefers-color-scheme: dark)")
+    mediaQueryList.addEventListener("change", handleThemeChange)
+    return () => {
+      mediaQueryList.removeEventListener("change", handleThemeChange)
+    }
+  }, [handleThemeChange])
 
   const value = {
     theme,
