docs: add adonis install documentation

--- a/apps/www/content/docs/changelog.mdx
+++ b/apps/www/content/docs/changelog.mdx
@@ -10,7 +10,7 @@ The new CLI is now available. It's a complete rewrite with a lot of new features
 
 This is a major step towards distributing code that you and your LLMs can access and use.
 
-1. First up, the cli now has support for all major React framework out of the box. Next.js, Remix, Vite and Laravel. And when you init into a new app, we update your existing Tailwind files instead of overriding.
+1. First up, the cli now has support for all major React framework out of the box. Next.js, Remix, Adonis, Vite and Laravel. And when you init into a new app, we update your existing Tailwind files instead of overriding.
 2. A component now ship its own dependencies. Take the accordion for example, it can define its Tailwind keyframes. When you add it to your project, we’ll update your tailwind.config.ts file accordingly.
 3. You can also install remote components using url. `npx shadcn add https://acme.com/registry/navbar.json`.
 4. We have also improve the init command. It does framework detection and can even init a brand new Next.js app in one command. `npx shadcn init`.
