feat(components): add carousel dots for MDX docs

--- a/apps/www/content/docs/components/carousel.mdx
+++ b/apps/www/content/docs/components/carousel.mdx
@@ -65,6 +65,7 @@ import {
   CarouselItem,
   CarouselNext,
   CarouselPrevious,
+  CarouselDots,
 } from "@/components/ui/carousel"
 ```
 
@@ -77,6 +78,7 @@ import {
   </CarouselContent>
   <CarouselPrevious />
   <CarouselNext />
+  <CarouselDots />
 </Carousel>
 ```
 
