--- a/apps/www/content/docs/components/resizable.mdx
+++ b/apps/www/content/docs/components/resizable.mdx
@@ -127,3 +127,55 @@ export default function Example() {
   )
 }
 ```
+
+### Control
+
+You can control the panel status by using refs.
+
+<ComponentPreview
+  name="resizable-control"
+  description="A group of resizable panels with a button to control the panel."
+/>
+
+```tsx showLineNumbers {11,34,13-21}
+import { useRef } from "react"
+import { Button } from "@/components/ui/button"
+import { ImperativePanelHandle } from "react-resizable-panels"
+import {
+    ResizableHandle,
+    ResizablePanel,
+    ResizablePanelGroup,
+} from "@/components/ui/resizable"
+
+export default function Example() {
+    const leftPanelRef = useRef<ImperativePanelHandle>(null)
+
+    const toggleLeftPanel = () => {
+        if (leftPanelRef.current) {
+            if (leftPanelRef.current.isCollapsed()) {
+                leftPanelRef.current.expand()
+            } else {
+                leftPanelRef.current.collapse()
+            }
+        }
+    }
+
+    return (
+        <ResizablePanelGroup direction="horizontal">
+            <ResizablePanel>
+                <Button onClick={toggleLeftPanel}>
+                    Toggle Left Panel
+                </Button>
+            </ResizablePanel>
+            <ResizableHandle />
+            <ResizablePanel
+                defaultSize={50}
+                collapsible={true}
+                ref={leftPanelRef}
+            >
+                Left Panel
+            </ResizablePanel>
+        </ResizablePanelGroup>
+    )
+}
+```
