docs(chart): Add link to Recharts API docs.

--- a/apps/www/content/docs/components/chart.mdx
+++ b/apps/www/content/docs/components/chart.mdx
@@ -2,6 +2,8 @@
 title: Chart
 description: Beautiful charts. Built using Recharts. Copy and paste into your apps.
 component: true
+links:
+  api: https://recharts.org/en-US/api
 ---
 
 <Callout className="mb-6">
