docs(www): update toast manual installation

--- a/apps/www/content/docs/components/toast.mdx
+++ b/apps/www/content/docs/components/toast.mdx
@@ -67,11 +67,11 @@ npm install @radix-ui/react-toast
 
 `toaster.tsx`
 
-<ComponentSource name="toast" fileName="toaster" />
+<ComponentSource name="toaster" />
 
-`use-toast.tsx`
+`use-toast.ts`
 
-<ComponentSource name="toast" fileName="use-toast" />
+<ComponentSource name="use-toast" />
 
 <Step>Update the import paths to match your project setup.</Step>
 
