--- a/apps/www/content/docs/components/navigation-menu.mdx
+++ b/apps/www/content/docs/components/navigation-menu.mdx
@@ -77,6 +77,10 @@ import {
 
 ## Examples
 
+### Persistent Navigation Menu
+
+<ComponentPreview name="navigation-menu-persistent" />
+
 ### Link Component
 
 When using the Next.js `<Link />` component, you can use `navigationMenuTriggerStyle()` to apply the correct styles to the trigger.
