doc(navigation-menu): example of menu visibility control

--- a/apps/www/content/docs/components/navigation-menu.mdx
+++ b/apps/www/content/docs/components/navigation-menu.mdx
@@ -77,9 +77,13 @@ import {
 
 ## Examples
 
-### Persistent Navigation Menu
+### Controlling Menu Visibility
+
+To manually control the visibility of the `<NavigationMenu>`, use its `value` prop. This approach is useful for testing and customizing the behavior of the `<NavigationMenu>`.
 
 <ComponentPreview name="navigation-menu-persistent" />
+
+Ensure your menu is accessible. Considering various ways users might want to open and close your menu, such as pressing the Escape key, scrolling off screen, etc.
 
 ### Link Component
 
