fix: restore `asChild` API in components by adding `Slottable`
Wrap `children` with `Slottable` from `@radix-ui/react-slot` to fix broken `asChild` API.
This ensures proper props forwarding when custom components are passed as children.

Affected components:
- Accordion
- ContextMenu
- Dialog
- Drawer
- DropdownMenu
- Menubar
- NavigationMenu
- Select
- Sheet

Resolves issues with `asChild` compatibility and aligns with Radix UI best practices.

--- a/apps/www/content/docs/components/drawer.mdx
+++ b/apps/www/content/docs/components/drawer.mdx
@@ -35,7 +35,7 @@ npx shadcn@latest add drawer
 <Step>Install the following dependencies:</Step>
 
 ```bash
-npm install vaul
+npm install vaul @radix-ui/react-slot
 ```
 
 <Step>Copy and paste the following code into your project.</Step>
