--- a/apps/www/content/docs/components/dropdown-menu.mdx
+++ b/apps/www/content/docs/components/dropdown-menu.mdx
@@ -36,7 +36,7 @@ npx shadcn@latest add dropdown-menu
 <Step>Install the following dependencies:</Step>
 
 ```bash
-npm install @radix-ui/react-dropdown-menu
+npm install @radix-ui/react-dropdown-menu @radix-ui/react-slot
 ```
 
 <Step>Copy and paste the following code into your project.</Step>
