--- a/apps/www/content/docs/components/context-menu.mdx
+++ b/apps/www/content/docs/components/context-menu.mdx
@@ -35,7 +35,7 @@ npx shadcn@latest add context-menu
 <Step>Install the following dependencies:</Step>
 
 ```bash
-npm install @radix-ui/react-context-menu
+npm install @radix-ui/react-context-menu @radix-ui/react-slot
 ```
 
 <Step>Copy and paste the following code into your project.</Step>
