--- a/apps/www/content/docs/components/dialog.mdx
+++ b/apps/www/content/docs/components/dialog.mdx
@@ -36,7 +36,7 @@ npx shadcn@latest add dialog
 <Step>Install the following dependencies:</Step>
 
 ```bash
-npm install @radix-ui/react-dialog
+npm install @radix-ui/react-dialog @radix-ui/react-slot
 ```
 
 <Step>Copy and paste the following code into your project.</Step>
