--- a/apps/www/content/docs/components/menubar.mdx
+++ b/apps/www/content/docs/components/menubar.mdx
@@ -32,7 +32,7 @@ npx shadcn@latest add menubar
 <Step>Install the following dependencies:</Step>
 
 ```bash
-npm install @radix-ui/react-menubar
+npm install @radix-ui/react-menubar @radix-ui/react-slot
 ```
 
 <Step>Copy and paste the following code into your project.</Step>
