--- a/apps/www/content/docs/components/navigation-menu.mdx
+++ b/apps/www/content/docs/components/navigation-menu.mdx
@@ -32,7 +32,7 @@ npx shadcn@latest add navigation-menu
 <Step>Install the following dependencies:</Step>
 
 ```bash
-npm install @radix-ui/react-navigation-menu
+npm install @radix-ui/react-navigation-menu @radix-ui/react-slot
 ```
 
 <Step>Copy and paste the following code into your project.</Step>
