--- a/apps/www/content/docs/components/select.mdx
+++ b/apps/www/content/docs/components/select.mdx
@@ -36,7 +36,7 @@ npx shadcn@latest add select
 <Step>Install the following dependencies:</Step>
 
 ```bash
-npm install @radix-ui/react-select
+npm install @radix-ui/react-select @radix-ui/react-slot
 ```
 
 <Step>Copy and paste the following code into your project.</Step>
