--- a/apps/www/content/docs/components/sheet.mdx
+++ b/apps/www/content/docs/components/sheet.mdx
@@ -32,7 +32,7 @@ npx shadcn@latest add sheet
 <Step>Install the following dependencies:</Step>
 
 ```bash
-npm install @radix-ui/react-dialog
+npm install @radix-ui/react-dialog @radix-ui/react-slot
 ```
 
 <Step>Copy and paste the following code into your project.</Step>
