--- a/apps/www/content/docs/dark-mode/next.mdx
+++ b/apps/www/content/docs/dark-mode/next.mdx
@@ -33,7 +33,7 @@ export function ThemeProvider({
 
 ### Wrap your root layout
 
-Add the `ThemeProvider` to your root layout.
+Add the `ThemeProvider` to your root layout and the `suppressHydrationWarning` to the html tag.
 
 ```tsx {1,9-11} title="app/layout.tsx"
 import { ThemeProvider } from "@/components/theme-provider"
